force-app/main/default/objects/IME_SC_SLA_Matrix__c/IME_SC_SLA_Matrix__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SLA Matrix with List</description>
    <label>IME_SC_SLA_Matrix</label>
</CustomObject>