force-app/main/default/objects/IME_SC_SLA_Matrix__c/fields/Is_SLA_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_SLA_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SLA Active</label>
    <type>Checkbox</type>
</CustomField>