force-app/main/default/objects/IME_SC_SLA_Matrix__c/fields/SLA_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>SLA_Period_Type__c</fullName>
    <label>SLA Period Type</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>