force-app/main/default/objects/IME_SC_SLA_Matrix__c/fields/SLA_Value__c.field-meta.xml
<CustomField>
    <fullName>SLA_Value__c</fullName>
    <label>SLA Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>