force-app/main/default/objects/IME_SC_SLA_Matrix__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>